tools/bun/tests/snapshots/versions_test__bun_tool__unpin_version__doesnt_remove_if_not_matching.snap
---
source: tools/bun/tests/versions_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"package.json\")).unwrap()"
---
{
  "devEngines": {
    "runtime": {
      "name": "node",
      "version": "^20"
    }
  }
}
