tools/bun/tests/snapshots/versions_test__bun_tool__unpin_version__removes_if_matching.snap
---
source: tools/bun/tests/versions_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"package.json\")).unwrap()"
---
{
  "devEngines": {}
}
